Do not reverse columns on mobile, showing blocks in the correct order

--- a/assets/home/sections/sensei-pro-ad.scss
+++ b/assets/home/sections/sensei-pro-ad.scss
@@ -3,7 +3,7 @@
 .sensei-home {
 	&__sensei-pro-ad {
 		display: flex;
-		flex-direction: column-reverse;
+		flex-direction: column;
 		margin-bottom: 20px;
 		font-size: 18px;
 		line-height: 1.5;
